--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="text_view_all">Popular</string>
     <string name="title_tab_home">Home</string>
     <string name="title_tab_movie_list">My List</string>
+    <string name="star_icon">★ %1$s</string>
+    <string name="rating_format">%.3g</string>
+    <string name="share_via">Share via</string>
+    <string name="text_html">text/html</string>
+    <string name="https_www_themoviedb_org_movie">https://www.themoviedb.org/movie/%1$d</string>
+    <string name="https_image_tmdb_org_t_p_w500">https://image.tmdb.org/t/p/w500%1$s</string>
 </resources>
