--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="https_www_themoviedb_org_movie">https://www.themoviedb.org/movie/%1$d</string>
     <string name="https_image_tmdb_org_t_p_w500">https://image.tmdb.org/t/p/w500%1$s</string>
     <string name="my_list">My List</string>
+    <string name="text_succes_add_to_favorite">success\n</string>
+    <string name="text_succes_delete_to_favorite">succes\n</string>
+    <string name="text_faliled_add_to_favorite">failed to add</string>
 </resources>
